--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/common": "19.2.9",
+    "@angular/compiler": "19.2.9",
+    "@angular/core": "19.2.9",
+    "@angular/forms": "19.2.9",
+    "@angular/platform-browser": "19.2.9",
+    "@angular/platform-browser-dynamic": "19.2.9",
+    "@angular/router": "19.2.9",
+    "@primeng/themes": "^19.1.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/postcss": "^4.1.5",
+    "postcss": "^8.5.3",
+    "primeng": "^19.1.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.5",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.8",
     "@angular/cli": "^19.2.8",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/compiler-cli": "19.2.9",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
@@ -36,8 +42,8 @@
     "typescript": "~5.7.2"
   },
   "overrides": {
-  "@supabase/supabase-js": {
-    "@supabase/auth-js": "2.61.0"
+    "@supabase/supabase-js": {
+      "@supabase/auth-js": "2.61.0"
+    }
   }
-}
 }
